--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=event-manager
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+server.port=8081
+
+springdoc.swagger-ui.url= /openapi.yaml
