--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=event-manager
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+server.port=8080
 
 springdoc.swagger-ui.url= /openapi.yaml
+
+jwt.lifetime=1800000
+jwt.sign-key=f8dba02d-93b4-4ffb-ac4d-168c6fbc0173
