--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ springdoc.swagger-ui.url= /openapi.yaml
 
 jwt.lifetime=1800000
 jwt.sign-key=f8dba02d-93b4-4ffb-ac4d-168c6fbc0173
+
+event.stats.cron=0 * * * * *
